[package]
name = "tulipv2-sdk-common-interface"
version = "0.9.22"
edition = "2021"
authors = ["Tulip Protocol"]
description = "common types, traits, and helper functions used by the v2 sdk"
keywords = ["solana", "anchor", "tulip-protocol"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/tulipv2-sdk-common"
readme = "../README.md"

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
spl-token = "3.5.0"
uint = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
arrayref = "0.3.6"